--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ p{
   background-color: var(--second-color);
   opacity: 0;
   pointer-events: none;
-  transition: opacity .5 ease;
+  transition: opacity 0.7s ease;
 }
 
 .menu.is-active {
