--- a/style.css
+++ b/style.css
@@ -223,6 +223,9 @@ progress::-moz-progress-bar {
 }
 
 /* Utilities */
+.bg-gray-light {
+  background-color: var(--gray-light-color);
+}
 
 box-shadow-1 {
   box-shadow: .25rem .25rem 1rem rgba(0, 0, 0, 0.25);
@@ -256,6 +259,16 @@ box-shadow-1 {
 
 .section {
   padding: 2rem 1rem;
+}
+
+.section-title {
+  border-top: thin solid var(--first-color);
+  border-bottom: thin solid var(--first-color);
+  margin: 2rem auto;
+  padding: .5rem 1rem;
+  width: 250px;
+  text-align: center;
+  color: var(--title-color);
 }
 
 .text-center {
@@ -317,6 +330,21 @@ box-shadow-1 {
   font-weight: bold;
   font-size: 2rem;
   text-decoration: none;
+}
+
+.service-card {
+  margin: 1rem auto;
+  padding: 1rem;
+  text-align: center;
+}
+
+.service-card h3 {
+  color: var(--title-color);
+}
+
+.service-card svg {
+  margin-bottom: 1.25rem;
+  fill: var(--first-color);
 }
 
 @media screen and (min-width:768px) {  
