responsive layout services section

--- a/style.css
+++ b/style.css
@@ -348,6 +348,16 @@ box-shadow-1 {
 }
 
 @media screen and (min-width:768px) {  
+  .services > .container {
+    display: grid;
+    grid-template-columns: repeat(2, 45%);
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .services .section-title {
+    grid-column: span 2;
+  }
 }
 
 @media screen and (min-width:1024px) {
@@ -364,4 +374,12 @@ box-shadow-1 {
     padding: 0.5rem;
     height: calc(var(--header-height) - .5rem);
   }
+
+  .services > .container {    
+    grid-template-columns: repeat(3, 30%);    
+  }
+
+  .services .section-title {
+    grid-column: span 3;
+  }  
 }
