--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* 2:42:00 Maquetado móvil  menu */
+/* 3:19:00 Maquetado móvil  menu */
 
 /* Custom Properties */
 :root {
@@ -387,6 +387,15 @@ box-shadow-1 {
 }
 
 @media screen and (min-width:768px) {  
+  .portfolio > .container {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+  }
+
+  .portfolio .section-title {
+    grid-column: span 2;
+  }
+
   .services > .container {
     display: grid;
     grid-template-columns: repeat(2, 45%);
@@ -412,6 +421,14 @@ box-shadow-1 {
     top: 0;
     padding: 0.5rem;
     height: calc(var(--header-height) - .5rem);
+  }
+
+  .portfolio > .container {   
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .portfolio .section-title {
+    grid-column: span 3;
   }
 
   .services > .container {    
