--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* 3:19:00 Maquetado móvil  menu */
+/* 4:04:00 Maquetado móvil  menu */
 
 /* Custom Properties */
 :root {
@@ -191,6 +191,45 @@ p{
   }
 }
 
+/* Modal */
+.modal {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  background-color: var(--black-alpha-color);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 1s;
+}
+
+.modal-content {
+  position: relative;
+  color: --var(--white-color);
+}
+
+.modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.modal-close svg {
+  width: 3rem;
+  height: 3rem;
+  fill: var(--first-color);
+}
+
+.modal[id|="trabajo"]:target {  
+  opacity: 1;
+  pointer-events: auto;
+}
+
 /* ProgressBar */
 
 progress {
@@ -305,7 +344,8 @@ box-shadow-1 {
 
 /* Site Styles */
 .about > article {  
-  margin-bottom: 2rem;
+  margin-bottom: 2rem;  
+  /* margin-top: 2rem; */
 }
 
 .header {
@@ -356,7 +396,7 @@ box-shadow-1 {
   color: var(--white-color);
   opacity: 0;
   pointer-events: none;
-  transition: all .5 ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
 .portfolio-card:hover .portfolio-card-info {
@@ -369,6 +409,37 @@ box-shadow-1 {
   border: thin solid var(--white-color);
   width: 100%;
   height: 100%;
+}
+
+.service-card {
+  margin: 1rem auto;
+  padding: 1rem;
+  text-align: center;
+}
+
+.portfolio-modal {
+  padding: 1rem;
+  max-width: 400px;  
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white-color);
+}
+
+.portfolio-modal h3 {
+  border-bottom: medium solid var(--first-color);
+  margin: 1rem auto;
+  padding: .5rem 0;
+  color: var(--title-color);  
+}
+
+.portfolio-details {
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-auto-rows: 2rem;
+}
+
+.portfolio-details b {
+  color: var(--first-color);
 }
 
 .service-card {
@@ -396,6 +467,16 @@ box-shadow-1 {
     grid-column: span 2;
   }
 
+  .portfolio-modal {
+    max-width: 800px;
+    flex-direction: row;   
+  }
+
+  .portfolio-info {
+    margin-left: 1rem;
+    align-self: center;
+  }
+
   .services > .container {
     display: grid;
     grid-template-columns: repeat(2, 45%);
@@ -412,8 +493,10 @@ box-shadow-1 {
   .about {
     display: grid;
     grid-template-columns: repeat(3, 30%);
-    justify-content: space-between;
-    align-content: center;    
+    justify-content: space-between;    
+    align-content: center;           
+    /* margin-bottom: 0 !important;    
+    margin-top: 2.5rem !important; */   
   }
   
   .header {
