Carousel layout component

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* 4:04:00 Maquetado móvil  menu */
+/* 4:15:00 Maquetado móvil  menu */
 
 /* Custom Properties */
 :root {
@@ -93,6 +93,29 @@ p{
 
 
 /* Components */
+
+/* Carousel */
+.carousel {
+  margin: 2rem auto;
+  padding: 2rem 0;
+  max-width: 800px;
+  text-align: center;
+  background-color: var(--carousel-bg-color);
+}
+
+.carousel input {
+  display: none;
+}
+
+.carousel label {
+  border: medium solid var(--gray-dark-color);
+  border-radius: 50%;
+  cursor: pointer;
+  margin: 0 .25rem;
+  display: inline-block;
+  width: .75rem;
+  height: .75rem;
+}
 
 /* HeroImage */
 .hero-image {
@@ -262,6 +285,12 @@ progress::-moz-progress-bar {
 }
 
 /* Utilities */
+.avatar {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
+
 .bg-gray-light {
   background-color: var(--gray-light-color);
 }
@@ -308,6 +337,10 @@ box-shadow-1 {
   width: 250px;
   text-align: center;
   color: var(--title-color);
+}
+
+.text-first-color {
+  color: var(--first-color);
 }
 
 .text-center {
