--- a/style.css
+++ b/style.css
@@ -95,6 +95,23 @@ p{
 /* Components */
 
 /* Carousel */
+@keyframes carousel-slide {
+  0% {
+    transform: translateX(0%);
+  }
+  
+  25% {
+    transform: translateX(-25%);
+  } 
+  
+  50% {
+    transform: translateX(-50%);
+  }
+
+  100% {
+    transform: translateX(-75%);
+  }
+}
 .carousel {
   margin: 2rem auto;
   padding: 2rem 0;
@@ -111,6 +128,7 @@ p{
   display: flex;
   list-style: none;
   transition: transform .5s ease-in-out;
+  animation: carousel-slide 12s ease-in-out;
 }
 
 .carousel input {
